adjust api get food of homepage
